Replaced iframe with webview
iframe would redirect the whole renderer process to TIDAL and make playback control script useless, instead, webview will have preload.js injected by electron with exclusive node integration

--- a/index.html
+++ b/index.html
@@ -5,50 +5,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <iframe src="http://listen.tidal.com" plugins></iframe>
-
+    <webview src="http://listen.tidal.com" preload="./preload.js" plugins></webview>
     <script>
-
-      setInterval(function() {
-        var doc = document.querySelector("iframe").contentDocument
-        if (doc) {
-          var title = doc.title
-          document.title = title
-        }
-      }, 500)
-
-      const ipcRenderer = require('electron').ipcRenderer;
-      ipcRenderer.on('playback-control', function(event, arg) {
-        var doc = document.querySelector("iframe").contentDocument
-
-        switch (arg) {
-          case "MediaPlayPause":
-            var playBtn = doc.querySelector("button.js-play")
-            var pauseBtn = doc.querySelector("button.js-pause")
-            var playPauseContainer= doc.querySelector(".play-controls__main-button")
-            if (playPauseContainer.className.indexOf("playing") == -1) {
-              playBtn.click()
-            }
-            else
-            {
-              pauseBtn.click()
-            }
-            break;
-
-          case "MediaNextTrack":
-            doc.querySelector("button.js-next").click();
-            break;
-
-          case "MediaPreviousTrack":
-            doc.querySelector("button.js-previous").click();
-            break;
-
-          case "MediaStop":
-            doc.querySelector("button.js-pause").click();
-            break;
-        }
+      const ipcRenderer = require("electron").ipcRenderer;
+      ipcRenderer.on("playback-control", function(ev, arg) {
+        // redirect to webview since main ipc can't directly communicate with it
+        document.querySelector("webview").send("playback-control", arg);
       });
-
     </script>
   </body>
 </html>
